@@ -1,4 +1,4 @@
-$Id: History,v 1.4 1999-05-07 13:25:01 stesting Exp $
+$Id: History,v 1.5 1999-05-19 08:50:18 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+May 19th, 99 J.Allison (tag intercoms-01-00-04)
+- Improvements suggested by Code Wizard in G4VVisManager.
 
 May 7th, 99 J.Allison (tag intercoms-01-00-03)
 - Added newVal.resize( parameter.entries() ) to G4UIcommand::SetParameter.
